# mc-beta

./: .gitignore  .gitmodules  CMakeLists.txt  MinecraftConfig.hpp.in  main.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
source/: Client.hpp  Input.hpp  Instance.hpp  Window.hpp  client.cpp  input.cpp  instance.cpp  window.cpp
source/assets/: Asset.hpp  AssetManager.hpp  assetman.cpp
source/fs/: File.hpp  file.cpp
source/interfaces/: IEditable.hpp  IMesh.hpp  IRenderer.hpp  IShader.hpp  ITexture.hpp
source/math/: Camera.hpp  Color.hpp  Matrices.hpp  Quaternion.hpp  Vectors.hpp  camera.cpp  math.cpp
source/opengl/: Mesh.hpp  OpenGL.hpp  Shader.hpp  Texture.hpp  mesh.cpp  shader.cpp  texture.cpp
win32/: icon.rc
